# c_boilerplate

./: .gitignore  CMakeLists.txt
algorithm/: CMakeLists.txt
algorithm/include/: algorithm.h
algorithm/src/: algorithm.c
algorithm/tests/: test_algo_all_of.c  test_algo_any_of.c  test_algo_for_each.c  test_algo_none_of.c
allocator/: CMakeLists.txt
allocator/demos/basic_allocator_demo/: CMakeLists.txt
allocator/demos/basic_allocator_demo/src/: main.c
allocator/include/: allocator.h
allocator/src/: allocator.c
containers/: CMakeLists.txt
containers/array/: CMakeLists.txt
containers/array/include/: array.h
containers/array/src/: array.c
containers/bst/: CMakeLists.txt
containers/bst/include/: bst.h
containers/bst/src/: bst.c
containers/bst/tests/: test_bst.c
containers/list/: CMakeLists.txt
containers/list/include/: list.h
containers/list/src/: list.c
containers/list/tests/: test_list_comprehensive.c  test_list_remove.c  test_list_reverse.c
containers/queue/: CMakeLists.txt
containers/queue/include/: queue.h
containers/queue/src/: queue.c
containers/queue/tests/: test_queue_comprehensive.c
containers/stack/: CMakeLists.txt
containers/stack/include/: stack.h
containers/stack/src/: stack.c
containers/stack/tests/: test_stack_comprehensive.c  test_stack_init.c
containers/vector/: CMakeLists.txt
containers/vector/include/: vector.h  vector_iter.h
containers/vector/src/: vector.c  vector_iter.c
containers/vector/tests/: test_init.c  test_push_back.c  test_vector_at.c  test_vector_iter_comprehensive.c
logger/: CMakeLists.txt
logger/demos/basic_logger_demo/: CMakeLists.txt
logger/demos/basic_logger_demo/src/: main.c
logger/demos/heapsort_logger_demo/: CMakeLists.txt
logger/demos/heapsort_logger_demo/include/: heapsort.h
logger/demos/heapsort_logger_demo/src/: heapsort.c  main.c
logger/include/: logger.h
logger/src/: logger.c
